Merged in feature/profile-frontend (pull request #171)
Profile page

* Add helper method in AuthService

* Add ng-file-upload dependency

* Fix Profile page, support picture uploads

    - Fix constant redirect bug
    - Change JSP to HTML/Angular code
    - Allow uploading pictures (WIP)

* Rename user endpoints, add OPTIONS profile picture endpoint

    - Change = in search endpoints to /
    - Add OPTIONS preflight endpoint
    - Rename DTO field, use Jackson annotations

* Increase max picture size, rename errors and constants

* Refactor out ProfilePictureDto

    - Receive and parse raw base64 URI in controller
    - Remove ProfilePictureDto

* Increase max picture size

* Improve upload process

    - Send full base64 encoded picture data
    - Serve picture from own computer on successful change
    - Only submit picture on submit button click
    - Disable submit button when necessary

* Support removing profile picture

* Allow DELETE /users/picture

* Show profile stats

* Add frontend support for top 10 games

* Add backend TODOs

* Send more data in game scores

    - Send game cover picture
    - Send full game summary
    - Send game release date

* Show new data in frontend

* Better handle removing profile picture

* Minor backend changes

* Add TODO

* Remove solved TODO

Approved-by: Juan Li Puma <juanlipuma94@gmail.com>